# UserCenterAPI

./: LICENSE  model_script.py  pyproject.toml
api/: config.py  deps.py  errcode.py  main.py  security.py
api/model/: app.py  base.py  org.py  permission.py  role.py  user.py
api/schema/: app.py  org.py  role.py  user.py
api/service/: __init__.py  account.py  app.py  auth.py  base.py  org.py  role.py  user.py
