[project]
name = "usercenterapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "jhu>=1.6.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.1",
]
